--- a/package.json
+++ b/package.json
@@ -10,9 +10,27 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native/new-app-screen": "0.80.1",
+    "@react-navigation/native": "^6.1.8",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@reduxjs/toolkit": "^2.8.2",
+    "@zegocloud/zego-uikit-prebuilt-call-rn": "^6.3.15",
+    "@zegocloud/zego-uikit-rn": "^2.17.11",
     "react": "19.1.0",
+    "react-delegate-component": "^1.0.0",
     "react-native": "0.80.1",
-    "@react-native/new-app-screen": "0.80.1"
+    "react-native-device-info": "^14.0.4",
+    "react-native-encrypted-storage": "^4.0.3",
+    "react-native-gesture-handler": "^2.27.1",
+    "react-native-keep-awake": "^4.0.0",
+    "react-native-orientation-locker": "^1.7.0",
+    "react-native-safe-area-context": "^5.5.1",
+    "react-native-screens": "^4.11.1",
+    "react-native-sound": "^0.11.2",
+    "react-native-vector-icons": "^10.2.0",
+    "react-redux": "^9.2.0",
+    "zego-express-engine-reactnative": "^3.20.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
